modified drop path

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Saturday, July 16, 2014
 <div id="preparing-environment" class="section level2">
 <h2>Preparing Environment</h2>
 <p><strong>Setting working directory &amp; seed</strong></p>
-<pre class="r"><code>setwd(&quot;H:/Dropbox/PML/project&quot;);
+<pre class="r"><code>setwd(&quot;C:/PML/project&quot;);
 load(&quot;Random.seed.Rdata&quot;)</code></pre>
 <p>By the way, it would be better if I could remember what seed is set. So set.seed() could be used, which is easier to reset the “.Random.seed”.</p>
 <p><strong>Loading data</strong></p>
